<resources>
    <string name="app_name">FragmentsAndnavigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="age">Age</string>
    <string name="confirm">Confirm</string>
    <string name="context">Context</string>
    <string name="change_info">Change Info</string>
    <string name="full_name">Full Name</string>
    <string name="country">Country</string>
    <string name="confirm_changes">Confirm Changes</string>
</resources>